<resources>
    <string name="app_name">Paradisata</string>
    <string name="splash">splashing</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="gambar_login">gambar login</string>
    <string name="belum_punya_akun">Doesn\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="login_dengan_menggunakan_google">Login by using Google</string>
    <string name="or">Or</string>
    <string name="sign_up">One Step Away to Your Dream Destination!</string>
    <string name="gambar_register">gambar register</string>
    <string name="sign_up_as_a">Sign Up As</string>
    <string name="tourist">Tourism</string>
    <string name="tour_guide">Tour Guide</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Already Have an Account?</string>
    <string name="sign_up_as_a_tour_guide">Sign up as a Tour Guide</string>
    <string name="back_icon">back icon</string>
    <string name="back">Back</string>
    <string name="no_telephone">No Telephone</string>
    <string name="email">Email</string>
    <string name="sign_up_as_a_tourism">Sign Up As a Tourism</string>
    <string name="please_fill_out_the_form_below">Please fill out the form below</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_you_know_about">Start your journey</string>
    <string name="hi_user">Hi user</string>
    <string name="notification">notification</string>
    <string name="category_destination">Category Destination</string>
    <string name="search_package_name">search package name</string>
    <string name="order_status">Order Status</string>
    <string name="to_accept">To Accept</string>
    <string name="in_process">In process</string>
    <string name="to_rate">To rate</string>
    <string name="my_history">History</string>
    <string name="my_rating">My Rating</string>
    <string name="my_bookmark">My Bookmark</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="location">Location</string>
    <string name="vehicle">Vehicle</string>
    <string name="lodging">Lodging</string>
    <string name="logout">Logout</string>
    <string name="prices">Prices</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="icon_kembali">icon_kembali</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="i_am_here_as_tourist">I am here as ... tourist</string>
    <string name="domestic">Domestic</string>
    <string name="foreign">Foreign</string>
    <string name="identity_authentication">Identity Authentication</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="package_information">Package Information</string>
    <string name="image_category">image category</string>
    <string name="wisata_kuliner">Wisata Kuliner</string>
    <string name="more_than_just_a_meal_it_s_an_experience">More than just a meal, it\'s an experience.</string>
    <string name="destinasi_kuliner_yang_wajib_anda_jelajahi">Destinasi kuliner yang wajib anda jelajahi</string>
    <string name="profile_tourguide">profile tourguide</string>
    <string name="melangkah_menyusuri_waktu_menemukan_keabadian">Melangkah Menyusuri Waktu, Menemukan Keabadian.</string>
    <string name="wisata_sejarah">Wisata Sejarah</string>
    <string name="destinasi_sejarah_yang_wajib_anda_ketahui">Destinasi Sejarah yang wajib anda ketahui</string>
    <string name="destinasi_alam_yang_wajib_kamu_ketahui">Destinasi Alam yang wajib kamu ketahui</string>
    <string name="menyusuri_tempat_suci_merasakan_kedekatan_dengan_tuhan">Menyusuri tempat suci, merasakan kedekatan dengan Tuhan.</string>
    <string name="wisata_religi">Wisata Religi</string>
    <string name="wisata_alam">Wisata Alam</string>
    <string name="stars">stars</string>
    <string name="book_now">Book Now</string>
    <string name="image_ktp">Image Ktp</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="harga">Harga</string>
    <string name="jam_buka">Jam Buka</string>
    <string name="tentang">Tentang</string>
    <string name="contact_tour_guide">Contact Tour Guide</string>
    <string name="home_stay">Home Stay</string>
    <string name="facilities">Facilities</string>
    <string name="tour_guide_recomendation">Tour Guide Recomendation</string>
    <string name="places_recomendation">Places Recomendation</string>
    <string name="history">History</string>
    <string name="culinary">Culinary</string>
    <string name="religion">Religion</string>
    <string name="nature">Nature</string>
    <string name="image_home">image home</string>
    <string name="transportation">Transportation</string>
    <string name="transportation_type">Transportation Type</string>
    <string name="two_wheels">Two Wheels</string>
    <string name="four_wheels">Four Wheels</string>
    <string name="daftar_dengan">Daftar Dengan</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp_sent_to">Enter OTP sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="app_info">App Info</string>
    <string name="description_app">Paradisata is an application where it connects between tourist and local tour guide activity. There are two types of users on PARADISATA, they are local tour guides and tourist.in this application, users as local tour guides can offer their \'package\' that inlcludes the tour guide services and tourist accommodations such as homestay, transportation and meal.</string>
    <string name="bangkit">bangkit</string>
    <string name="id_team">C242-PS227</string>
    <string name="app_information">App Info</string>
    <string name="your_data_is_being_verified_by_our_team">Your Data Is Being Verified By Our Team</string>
    <string name="this_process_will_take_3_x_24_hours">This Process will take 3 x 24 Hours</string>
    <string name="congratulation_now_you_are_part_of_paradisata">Congratulation now you are part of paradisata</string>
    <string name="next">Next</string>
    <string name="sorry_your_registration_is_failed">Sorry, your registration is failed</string>
    <string name="you_can_try_sign_up_again">You can try sign up again</string>
    <string name="btn_less">-</string>
    <string name="btn_up">+</string>
    <string name="_0">0</string>
    <string name="total_guest">Total Guest</string>
    <string name="my_booking">My Booking</string>
    <string name="prosess">Prosess</string>
    <string name="completed">Completed</string>
    <string name="destinations">Destinations</string>
    <string name="order_date">Order Date</string>
    <string name="rating">Rating</string>
    <string name="give_rating">Give Rating</string>
    <string name="give_review">Give Review</string>
    <string name="type_here">Type here</string>
    <string name="submit">Submit</string>
    <string name="choose_your_tour_guide">Choose Your Tour Guide</string>
    <string name="package_order">Package Order</string>
    <string name="check_in">Check In</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="check_out">Check Out</string>
    <string name="destinations_order">Destinations Order</string>
    <string name="you_can_choose_up_to_2_destinations_in_a_day_except_the_day_when_you_check_in_and_check_out">You can choose up to 2 Destinations in a day except the day when you check in and check out</string>
    <string name="add_your_destinations">Add your destinations</string>
    <string name="side_note">Side Note</string>
    <string name="your_list_order">Your List Order</string>
    <string name="orders">Orders</string>
    <string name="kuliner">Wisata Kuliner</string>
</resources>